Coveo: Fixed z-index issues + removed hardcoded token

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -435,7 +435,7 @@ ol li:last-child {
   -webkit-backdrop-filter: blur(20px);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   .header-container {
     display: flex;
@@ -950,6 +950,8 @@ main {
 
 /* Search results on content */
 atomic-search-interface#search-v2 {
+  position: relative;
+  z-index: 1;
   display: inline-block !important;
   width: 95vw;
   grid-column: 1 / -1;
